# kihon_jouhou

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  deploy.sh  hooks.json  progress.md
.claude/: settings.json  settings.local.json
.claude/rules/: DESIGN.md  anki-logic.md
.claude/skills/db-migrate/: SKILL.md
.claude/skills/deploy-gcp/: SKILL.md
backend/: .env.example  Cargo.toml
backend/kakomon/: 06_kakomon.json
backend/src/: main.rs
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.module.css  App.tsx  index.css
frontend/src/components/: InputView.module.css  InputView.tsx  PastExamView.tsx  StudyView.module.css  StudyView.tsx
frontend/src/lib/: api.ts  supabase.ts  types.ts
supabase/migrations/: 001_initial_schema.sql
